# lastLabs

lab_5/: CMakeLists.txt  lab_5.cpp
lab_6/: CMakeLists.txt  Log.h  lab_6.cpp
lab_7/: CMakeLists.txt  lab_7.cpp
lab_8/: CMakeLists.txt  lab_8.cpp
prac_3/: CMakeLists.txt  prak_3.cpp
prac_4/: CMakeLists.txt  Device.txt  prac_4.cpp
